# TrashBot

./: CMakeLists.txt  LICENSE  README.md  index.html  trashbot.config
docs/: GUI.md  Messaging.md  TemperatureSensors.md  index.html  index.txt
gpio_files/: Makefile  README  gpio-int-test.cpp
gui/: CMakeLists.txt  README.txt  main.cpp  mainwindow.h
include/GPIO/: TempDetector.h  pigpiomgr.h  tsic.h
include/messaging/: Messaging.h  MyOpenSSL.hpp  MySMTP.hpp  Socketing.hpp
lib/: Messaging.cpp  TempDetector.cpp  main.cpp  mainwindow.cpp  tsic.cpp
main_thread/: thread.cpp  thread1.cpp
message/: Makefile  Messaging.cpp  Messaging.h  MyOpenSSL.hpp  MySMTP.hpp  Socketing.hpp  mainwindow.cpp  sendmail  sendmail.cpp
tsic/: CMakeLists.txt  TempDetector.cpp  TempDetector.h  main.cpp  pigpiomgr.h  tsic.cpp  tsic.h
